c4prj2_input/grade.txt
Grading at Sun Aug  2 12:26:09 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘add_future_card’:
future.c:19:14: error: incompatible types when assigning to type ‘deck_t {aka struct deck_tag}’ from type ‘void *’
  fc->decks[i]=NULL;
              ^
future.c: In function ‘future_cards_from_deck’:
future.c:45:10: error: wrong type argument to unary exclamation mark
       if(!fc->decks[i])
          ^
Compilation of future.c failed

Overall Grade: F
